chore: title rename, chapter spacing

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -1,5 +1,5 @@
 \documentclass{myclass}
-\title{Tinylang}
+\title{tinylang}
 \date{June 2022}
 \tagline{Design and implementation of a \\ tiny programming language\\ in \textbf{Java}.}
 \author{Andimon}   % your name
